# sawbench

./: .gitignore  INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md  basic_analysis.py  generate_saw_euler_surface.py  heatmap_analysis.py  mapping_example.py  modular_analysis_workflow.py  old_working_analysis.py  plot_3d_saw_velocity_vs_euler.py
examples/ebsd_analysis/: model_saw_data_generation.py  modular_analysis_workflow.py  plot_saw_distributions.py  sensitivity_analysis_workflow.py
examples/ebsd_analysis/results/: saw_frequencies_allegro.json  saw_frequencies_allegro_foundation.json  saw_frequencies_dft.json  saw_frequencies_mace_finetuned.json  saw_frequencies_mace_foundation.json  saw_frequencies_mace_fromscratch_gen6.json  (+1 more)
examples/elastic_tensor/: ELASTIC_TENSOR_README.md  README_ELASTIC.md  check_shear_stability.py  diagnose_mlip_stress.py  elastic_tensor_comparison.py  elastic_tensor_comparison_fixed.py  elastic_tensor_corrected.py  elastic_tensor_example.py  elastic_tensor_with_reference.py  investigate_c44_issue.py  mlip_calculator_setup.py  mlip_dft_saw_comparison.py  validate_elastic_tensor.py  vasp_elastic_corrected.txt  verify_strain_generation.py
examples/saw_analysis/: example_ni3al.py
examples/utilities/: detailed_error_analysis.py  parity_plot_test.py
saw_elastic_predictions/: .gitignore  __init__.py  centroid_finder.py  saw_calculator.py
src/sawbench/: __init__.py  centroid_finder.py  deprecated_grains.py  elastic.py  euler_transformations.py  grains.py  io.py  materials.py  orientations.py  plotting.py  saw_calculator.py  statistics.py
